# AcousticSim-GetDP

./: .gitignore  CMakeLists.txt  CREDITS.txt  README.MD  README.txt
contrib/Arpack/: CMakeLists.txt  second.f  version.h  zneupd.f
contrib/Sparskit/: CMakeLists.txt  Sparskit.cpp  Sparskit.h  blas1.f  blassm.f  cmkreord.f  flu.f  formats.f  ilut.F  inout.f  iters.f  matvec.f  reordering.f  unary.f
examples/AcousticScattering/: .gitignore  Acoustic2D.pro  Acoustic2D_penetrable.pro  CreateEllipses.geo  README.txt  infos.xml  scattering.geo  scattering.pro  scattering_data.pro
examples/Room2D/: README.MD  data.pro  param.geo  room2d.geo  room2d.pro
examples/Room2DEig/: data.pro  eigen.par  eigenmodes_validation.py  room2dEig.geo  room2dEig.pro
src/common/: CMakeLists.txt  GetDPConfig.h.in  GetDPVersion.h.in  GmshSocket.h  ListUtils.cpp  ListUtils.h  MallocUtils.cpp  MallocUtils.h  Message.cpp  Message.h  OS.cpp  OS.h  TreeUtils.cpp  TreeUtils.h  avl.cpp  avl.h  picojson.h
src/functions/: BF.h  BF_Edge.cpp  BF_Edge_2.cpp  BF_Edge_3.cpp  BF_Edge_4.cpp  BF_Facet.cpp  BF_GroupOfEntities.cpp  BF_Node.cpp  BF_NodeXYZ.cpp  BF_Node_2.cpp  BF_Node_3.cpp  BF_Perpendicular.cpp  BF_Region.cpp  BF_Volume.cpp  CMakeLists.txt  Cal_Quantity.cpp  Cal_Quantity.h  Cal_Value.cpp  Cal_Value.h  F.h  F_Analytic.cpp  F_BiotSavart.cpp  F_Coord.cpp  F_DiffGeom.cpp  F_ExtMath.cpp  F_Geometry.cpp  F_Gmsh.cpp  F_Hysteresis.cpp  F_Interpolation.cpp  F_Math.cpp  F_Misc.cpp  F_MultiHar.cpp  F_Octave.cpp  F_PeWe.cpp  F_Python.cpp  F_Raytracing.cpp  GF.h  GF_Helmholtz.cpp  GF_HelmholtzxForm.cpp  GF_Laplace.cpp  (+1 more)
src/interface/: CMakeLists.txt  MacroManager.cpp  MacroManager.h  ProData.cpp  ProData.h  ProDefine.cpp  ProDefine.h  ProDefines.h  ProParser.h  ProParser.l  ProParser.output  ProParser.tab.cpp  ProParser.tab.hpp  ProParser.y  ProParser.yy.cpp
src/kernel/: CMakeLists.txt  Cal_AnalyticIntegration.cpp  Cal_AnalyticIntegration.h  Cal_AssembleTerm.cpp  Cal_AssembleTerm.h  Cal_GalerkinTermOfFemEquation.cpp  Cal_GalerkinTermOfFemEquation.h  Cal_GlobalTermOfFemEquation.cpp  Cal_GlobalTermOfFemEquation.h  Cal_IntegralQuantity.cpp  Cal_IntegralQuantity.h  Cal_PostQuantity.cpp  Cal_PostQuantity.h  Cal_SmallFemTermOfFemEquation.cpp  Cal_SmallFemTermOfFemEquation.h  Cal_SolutionErrorRatio.cpp  DofData.cpp  DofData.h  EigenSolve.cpp  EigenSolve.h  EigenSolve_ARPACK.cpp  EigenSolve_SLEPC.cpp  ExtendedGroup.cpp  ExtendedGroup.h  Gauss.h  Gauss_Hexahedron.cpp  Gauss_Hexahedron.h  Gauss_Line.cpp  Gauss_Line.h  Gauss_Point.cpp  Gauss_Prism.cpp  Gauss_Prism.h  Gauss_Pyramid.cpp  Gauss_Pyramid.h  Gauss_Quadrangle.cpp  Gauss_Quadrangle.h  Gauss_Tetrahedron.cpp  Gauss_Tetrahedron.h  Gauss_Triangle.cpp  Gauss_Triangle.h  (+63 more)
src/main/: Main.cpp
src/numeric/: Adapt.cpp  Adapt.h  Bessel.cpp  Bessel.h  BesselLib.f  CMakeLists.txt  Legendre.cpp  Legendre.h  NumericUtils.cpp  NumericUtils.h  kissfft.hh
templates/: Interactive.pro  Interactive_Elasticity.pro  Interactive_Electrostatics.pro  Interactive_Magnetostatics.pro  Lib_Elasticity_u.pro  Lib_Electrostatics_v.pro  Lib_Magnetodynamics2D_av_Cir.pro  Lib_Magnetostatics_a_phi.pro  Lib_Materials.pro  README.txt
utils/misc/: getdp_framework.plist  pyram.c  update_copyright.sh
utils/post/: deriv.awk  moyx.awk
